# promptops-studio

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  promptops-studio.code-workspace
Docs/: plan-CN.md
Docs/learning-notes/: 01-init-spring-boot-project.md  02-setup-mysql-docker.md  03-git-empty-directories.md  04-setup-pipx.md  05-setup-fastapi-with-poetry.md  06-setup-redis-docker.md  07-setup-react-with-ice.md
ai-runtime/: .env.example  README.md  pyproject.toml
ai-runtime/src/ai_runtime/: config.py  dependencies.py  exceptions.py  main.py  models.py
ai-runtime/src/ai_runtime/routers/: index_router.py  retrieve_router.py
ai-runtime/src/ai_runtime/services/: document_service.py  embedding_service.py  milvus_service.py  rerank_service.py  weaviate_service.py
ai-runtime/tests/: conftest.py  test_document_service.py  test_embedding_service.py  test_milvus_service.py  test_rerank_service.py  test_routers.py  test_weaviate_service.py
deploy/: init-db.sql
frontend/: next.config.ts  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[projectId]/kb/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts
platform-api/: build.gradle  settings.gradle
platform-api/src/main/java/com/promptops/platformapi/: HealthController.java  HelloController.java  PlatformApiApplication.java
platform-api/src/main/resources/: application.yml
platform-api/src/test/resources/: application.yml
(+39 files in other folders)
