[tool.poetry]
name = "ai-runtime"
version = "0.1.0"
description = "AI Runtime Service with FastAPI and LangChain"
authors = ["Gerry Tao <gerry.tao@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ai_runtime", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = {extras = ["standard"], version = ">=0.40.0,<0.41.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
